--- a/java.css
+++ b/java.css
@@ -85,6 +85,7 @@ body{
     margin-top: 3%;
     flex-direction: column;
     overflow: scroll;
+    overflow-x: scroll;
 }
 .content1{
     width: 100%;
